--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,7 @@
                     <div class="row">
                         <div class="col-12 col-lg-4 mb-1">
                             <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
+                                Loading...
                             </div>
                         </div>
                         <div class="col-12 col-lg-8">
@@ -86,56 +87,60 @@
                 </div>
                 <!-- C++ Tab -->
                 <div class="tab-pane fade" id="cpp" role="tabpanel" aria-labelledby="cpp-tab">
-                        <div class="row">
-                            <div class="col-12 col-lg-4 mb-1">
-                                <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
-                                </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-4 mb-1">
+                            <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
+                                Loading...
                             </div>
-                            <div class="col-12 col-lg-8">
-                                <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
-                                </div>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                             </div>
                         </div>
                     </div>
+                </div>
                 <!-- Java Tab -->
                 <div class="tab-pane fade" id="java" role="tabpanel" aria-labelledby="java-tab">
-                        <div class="row">
-                            <div class="col-12 col-lg-4 mb-1">
-                                <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
-                                </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-4 mb-1">
+                            <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
+                                Loading...
                             </div>
-                            <div class="col-12 col-lg-8">
-                                <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
-                                </div>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                             </div>
                         </div>
                     </div>
+                </div>
                 <!-- Web Tab -->
                 <div class="tab-pane fade" id="web" role="tabpanel" aria-labelledby="web-tab">
-                        <div class="row">
-                            <div class="col-12 col-lg-4 mb-1">
-                                <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
-                                </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-4 mb-1">
+                            <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
+                                Loading...
                             </div>
-                            <div class="col-12 col-lg-8">
-                                <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
-                                </div>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                             </div>
                         </div>
                     </div>
+                </div>
                 <!-- Other Tab -->
                 <div class="tab-pane fade" id="other" role="tabpanel" aria-labelledby="other-tab">
-                        <div class="row">
-                            <div class="col-12 col-lg-4 mb-1">
-                                <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
-                                </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-4 mb-1">
+                            <div class="list-group" id="list-tab" role="tablist"><!-- These links will be created in JS with data from Github. -->
+                                Loading...
                             </div>
-                            <div class="col-12 col-lg-8">
-                                <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
-                                </div>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <div class="tab-content" id="nav-tabContent"><!-- This content will be created in JS with data from Github. -->
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </main>
