--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <style>
-        a[data-toggle="collapse"]:hover {
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -43,11 +39,20 @@
         <div id="projectsAccordion" role="tablist" aria-multiselectable="true">
             <div class="card">
                 <div class="card-header" role="tab" id="project1HeaderId">
-                    <h5 class="mb-0">
-                        <a data-toggle="collapse" data-parent="#projectsAccordion" href="#project1" aria-expanded="true" aria-controls="project1">
-                            <i id="angle" class="fas fa-plus"></i> Project 1
-                        </a>
-                    </h5>
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="mb-0">
+                                <a data-toggle="collapse" data-parent="#projectsAccordion" href="#project1" aria-expanded="true" aria-controls="project1">
+                                    <i id="angle" class="fas fa-plus"></i> Project 1
+                                </a>
+                            </h5>
+                            <small class="text-muted">Project 1 Subtitle</small>
+                        </div>
+                        <div class="col text-right">
+                            <a href="#" class="btn btn-secondary" role="button" data-toggle="tooltip" title="Website"><i class="fas fa-desktop"></i></a>
+                            <a href="#" class="btn btn-primary" role="button" data-toggle="tooltip" title="Github"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <div id="project1" class="collapse in" role="tabpanel" aria-labelledby="project1HeaderId">
                     <div class="card-body">
@@ -77,29 +82,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script><!-- For markdown in project descriptions -->
-    <script>
-        // Only open one project at a time
-        $(".collapse").on('show.bs.collapse', function() {
-            $(`#${$(this).attr("aria-labelledby")} #angle`).removeClass("fa-plus").addClass("fa-minus")
-            $collapse = $(this)
-            $(".collapse").each(function() {
-                if ($(this) != $collapse)
-                    $(this).collapse('hide')
-            })
-        })
-        $(".collapse").on('hide.bs.collapse', function() {
-            $(`#${$(this).attr("aria-labelledby")} #angle`).removeClass("fa-minus").addClass("fa-plus")
-        })
-
-        // Load projects from 'projects.json' and GitHub
-        $(function() {
-            // use marked() to parse markdown
-            fetch('https://raw.githubusercontent.com/727021/727021.github.io/master/projects.json')
-            .then((response) => { return response.json() })
-            .then((myJSON) => {
-                console.log(myJSON)
-            })
-        })
-    </script>
+    <script src="projects.js"></script>
 </body>
 </html>
