--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <style>
+        /* Size of embedded pdf */
+        #resume {
+            width: 100%;
+            height: 70vh;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -34,12 +41,22 @@
         </div>
     </nav>
     <div class="container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quos commodi architecto impedit fugit placeat aliquid ipsam, doloribus minima iste! Deserunt officia illo repudiandae corrupti ipsam voluptate ipsum non fugit!
+        <div class="row">
+            <div class="col">
+                <h1 class="display-4">Resume</h1>
+            </div>
+            <div class="col text-right pt-3">
+                <a target="_blank" href="resume.pdf" class="btn btn-primary" role="button" data-toggle="tooltip" title="Download"><i class="fas fa-download    "></i></a>
+            </div>
+        </div>
+        <object class="embed-responsive" data="resume.pdf" type="application/pdf" id="resume">
+            <embed class="embed-responsive-item" src="resume.pdf" type="application/pdf">
+        </object>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script>$(() => { $('[data-toggle="tooltip"]').tooltip() })</script>
 </body>
 </html>
