--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="container">
         <h1 class="display-4">About Me</h1>
-        <img src="https://via.placeholder.com/200" alt="" class="rounded-circle border float-md-left border-dark mx-auto mr-md-4 d-block d-md-inline">
+        <img src="me.png" width="200px" height="200px" alt="" class="rounded-circle border float-md-left border-dark mx-auto mr-md-4 d-block d-md-inline">
         <p class="lead">I'm <b>Andrew Schimelpfening</b>, a junior at BYU-Idaho. I'm pursuing a B.S. in Computer Science, and I'm loving what I'm learning. This site is where I showcase some of the <a href="projects.html">projects</a> I'm most proud of and provide a copy of my current <a href="resume.html">resume</a>.</p>
         <p>I first started programming in middle school, when I found some online C# tutorials and decided I loved writing code. Since then, I have worked with Java, C++, PHP, NodeJS, Emacs Lisp, and various SQL varieties. I'm currently seeking an internship, and I look forward to a career in software development or a related field. I hope to be able to use my skills and talents to create products that will help others. If you'd like to contact me, I can be reached at <a href="mailto:andrewschim@gmail.com" target="_blank">andrewschim@gmail.com</a>.</p>
     </div>
